# CreditIQ-explainable-credit-risk-scoring-system

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: app.yaml
models/: best_params.joblib  categorical_cols.joblib  numeric_cols.joblib  xgboost_model.joblib
notebooks/: 00-Database_Import.ipynb  01-EDA.ipynb  02-Preprocessing.ipynb  03-Modeling.ipynb  05-Credit_APP.ipynb  README.md  XAI_explainabilty.ipynb
src/: config.py  tempCodeRunnerFile.py
src/credit_risk_scoring/: app.py  config.py  explain.py  train.py
src/explainable_credit_risk_scoring_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_smoke.py
