[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-credit-risk-scoring-system"
version = "0.1.0"
description = "Explainable credit risk scoring system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "shap>=0.45",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
